2007-07-27  Brian Warner  <warner@lothar.com>

	* buildbot/changes/mail.py: refactor: move parsing into a method
	named 'parse', each parser type gets a separate subclass
	* buildbot/test/test_mailparse.py: match changes

	* docs/buildbot.texinfo (Getting Source Code Changes): refactor
	docs on email-based ChangeSources

	* docs/buildbot.texinfo (Getting Source Code Changes): move all
	the changesource types up a level, removing the one-entry menu in
	the process

	* buildbot/master.py (BuildMaster.loadConfig_Slaves): rename
	c['bots'] to c['slaves'], and use buildbot.slave.BuildSlave
	instances instead of tuples. Closes #63.
	* buildbot/slave/__init__.py (BuildSlave): define marker class
	* buildbot/scripts/sample.cfg: use c['slaves'] in sample config
	* docs/buildbot.texinfo (Buildslave Specifiers): document c['slaves']
	* buildbot/test/test_*.py: update tests to match
	* buildbot/test/test_config.py (ConfigTest.testBots): verify that
	the c['bots'] backwards-compatibility handler works

2007-07-26  Brian Warner  <warner@lothar.com>

	* buildbot/changes/hgbuildbot.py (hook): add an in-process
	Mercurial change-sending hook, contributed by Frederic Leroy.
	Thanks! Addresses #50.
	* docs/buildbot.texinfo (MercurialHook): document it

	* buildbot/changes/hgbuildbot.py: change the way imports are done,
	to make it compatible with at least hg-0.9.1 and the current 0.9.4

2007-07-17  Brian Warner  <warner@lothar.com>

	* buildbot/process/buildstep.py (BuildStep.getLog): add a
	convenience method to retrieve a log added with
	addLog()/addCompleteLog()/etc or logfiles= . I should have added
	this two years ago..

2007-07-03  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (ShellCommand._startCommand): when
	logging the environment variables, put one variable on each line,
	rather than having one really long line with all of them. This
	should make them a bit more readable and not trigger the